Refactor string handling and improve null/blank checks across multiple classes
- Updated methods to use `trim().isEmpty()` instead of `isBlank()` for better whitespace handling in HttpLogData.java, LogStringBuilder.java, AbstractHttpLogFormatter.java, and others.
- Changed `Optional.isEmpty()` to `Optional.isPresent()` for clarity in HttpTiming.java and JsonHttpLogFormatter.java.
- Enhanced content type parsing in AbstractHttpServerAdapter.java to handle whitespace correctly.
- Refactored response body handling in CachedBodyHttpServletResponse.java and CachedBodyHttpServletRequest.java for improved byte array management.
- Updated Map creation in SpringBootServerDemo.java for better readability and performance.